separates from minimal java notebook (only one jdk in base).